# cuizhanming-com-xai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agent-memory/principal-ai-engineer/: MEMORY.md  project_scaffold.md  xai_api_live_facts.md
.claude/agent-memory/principal-pm/: MEMORY.md  project_phase1_scope.md  project_us4_decisions.md
.claude/agent-memory/principal-qa/: MEMORY.md  feedback_asyncio_sleep_patch.md  feedback_respx_query_param_matching.md  feedback_typer_runner.md  project_generate_video_no_retry.md  project_xai_api_shape.md
.claude/agent-memory/principal-sre/: MEMORY.md  project_github_repo.md
.claude/agents/: orchestrator.md  principal-ai-engineer.md  principal-cli-engineer.md  principal-pm.md  principal-qa.md  principal-sre.md
.claude/skills/claude-api/: SKILL.md
.claude/skills/xai-api/: SKILL.md
.claude/skills/xai-api/references/: polling-patterns.md
.claude/skills/xai-cli-conventions/: SKILL.md
.claude/skills/xai-github-setup/: SKILL.md
.claude/skills/xai-product-context/: SKILL.md
.claude/skills/xai-release-workflow/: SKILL.md  github-setup.md
.claude/skills/xai-test-strategy/: SKILL.md
.github/workflows/: ci.yml
docs/: PRD-image-to-video-generation.md
src/xai_cli/: api.py  cli.py  config.py  exceptions.py  image_utils.py
tests/: conftest.py  test_api.py  test_api_batch.py  test_api_edit.py  test_api_image.py  test_cli_batch.py  test_cli_download.py  test_cli_edit.py  test_cli_generate.py  test_cli_image.py  test_cli_status.py  test_image_utils.py
(+1 files in other folders)
