[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xai-cli"
version = "0.1.0"
description = "CLI for xAI APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "xAI CLI"}]
keywords = ["xai", "cli", "video", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
xai = "xai_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "anyio[trio]>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/xai_cli"]
